[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmanus"
version = "0.1.0"
description = "A versatile agent that can solve various tasks using multiple tools"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "mannaandpoem and OpenManus Team", email = "mannaandpoem@gmail.com"}
]
keywords = ["ai", "agent", "llm", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic~=2.10.6",
    "openai~=1.66.3",
    "tenacity~=9.0.0",
    "pyyaml~=6.0.2",
    "loguru~=0.7.3",
    "numpy",
    "datasets~=3.4.1",
    "fastapi~=0.115.11",
    "tiktoken~=0.9.0",
    "html2text~=2024.2.26",
    "gymnasium~=1.1.1",
    "pillow>=10.4,<11.0",
    "browsergym~=0.13.3",
    "uvicorn~=0.34.0",
    "unidiff~=0.7.5",
    "browser-use~=0.1.40",
    "googlesearch-python~=1.3.0",
    "baidusearch~=1.0.3",
    "duckduckgo_search~=7.5.3",
    "aiofiles~=24.1.0",
    "pydantic_core~=2.27.2",
    "colorama~=0.4.6",
    "playwright~=1.51.0",
    "docker~=7.1.0",
    "mcp~=1.5.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0",
    "boto3~=1.37.18",
    "requests~=2.32.3",
    "beautifulsoup4~=4.13.3",
    "crawl4ai~=0.6.3",
    "huggingface-hub~=0.29.2",
    "setuptools~=75.8.0",
    "structlog>=25.5.0",
]

[project.scripts]
openmanus = "main:main"

[project.urls]
Homepage = "https://github.com/FoundationAgents/OpenManus"
Documentation = "https://github.com/FoundationAgents/OpenManus"
Repository = "https://github.com/FoundationAgents/OpenManus"
Issues = "https://github.com/FoundationAgents/OpenManus/issues"

[tool.hatch.build.targets.wheel]
# 关键：项目源码不在 `openmanus/` 目录，而在 `app/`（以及 `protocol/`）。
# hatchling 默认会按项目名猜包目录，猜不到就会在 uv 的 editable build 里报错。
packages = ["app", "protocol"]

[tool.uv]
# uv 特定配置

[project.dependency-groups]
dev = [
    "pytest~=8.3.5",
    "pytest-asyncio~=0.25.3",
]

[tool.uv.sources]
# 如果需要指定特定的包源，可以在这里配置
# 例如：
# openai = { git = "https://github.com/openai/openai-python.git" }
